--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -8,4 +8,4 @@ title: Home
   Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
 </div>
 
-![My helpful screenshot]({{ site.url }}/assets/keep-calm.jpg)
+![My helpful screenshot]({{ site.url }}/assets/keep-calm.png)
