--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -3,9 +3,8 @@ layout: post
 title: Home
 ---
 
+![Crowdsourced anti-bullying tool]({{ site.baseurl }}assets/keep-calm.png)
 
 <div class="message">
-  Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
+  Crowdsourced anti-bullying tool.
 </div>
-
-![My helpful screenshot]({{ site.baseurl }}assets/keep-calm.png)
