--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -6,5 +6,6 @@ title: Home
 ![Crowdsourced anti-bullying tool]({{ site.baseurl }}assets/keep-calm.png)
 
 <div class="message">
-  Crowdsourced anti-bullying tool.
+  Chrome extension that allows you to report harmful users, and to help the community feel more safe
+  while browsing the Internet.
 </div>
