update home page

--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -3,9 +3,16 @@ layout: post
 title: Home
 ---
 
-![Crowdsourced anti-bullying tool]({{ site.baseurl }}assets/keep-calm.png)
+<div class="image-home">
+    <img src="{{ site.baseurl }}assets/keep-calm.png" title="Crowdsourced anti-bullying tool" />
+</div>
 
-<div class="message">
-  Chrome extension that allows you to report harmful users, and to help the community feel more safe
-  while browsing the Internet.
+<div class="message-home">
+    <div class="message message-home-1">
+    <strong>Ignore</strong> messages from harmful users
+    </div>
+
+    <div class="message message-home-2">
+    <strong>Help</strong> the community by reporting online harassement
+    </div>
 </div>
