add plugin packages and link to download it

--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -15,4 +15,8 @@ title: Home
     <div class="message message-home-2">
     <strong>Help</strong> the community by reporting online harassement
     </div>
+    
+    <div class="message message-download">
+    <a href="{{ site.baseurl }}assets/keepcalm.crx">Download here!!</a>
+    </div>
 </div>
