add download icon

--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -17,6 +17,9 @@ title: Home
     </div>
     
     <div class="message message-download">
-    <a href="{{ site.baseurl }}assets/keepcalm.crx">Download here!!</a>
+        <a href="{{ site.baseurl }}assets/keepcalm.crx">
+            <span>Download</span>
+            <img src="{{ site.baseurl }}assets/ic_get_app_black_48dp.png" title="Download" width="60px" />
+        </a>
     </div>
 </div>
