--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -23,3 +23,16 @@ title: Home
         </a>
     </div>
 </div>
+
+
+      
+      
+<div class="ted-talk">
+    <h1>Why is this important?</h1>
+
+    <div class="monika-quote">
+        <p>&ldquo;Public shaming as a blood sport has to stop&rdquo;</p>
+    </div>
+
+<iframe src="https://embed-ssl.ted.com/talks/lang/en/monica_lewinsky_the_price_of_shame.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+</div>
