--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -22,6 +22,14 @@ title: Home
             <img src="{{ site.baseurl }}assets/ic_get_app_black_48dp.png" title="Download" width="60px" />
         </a>
     </div>
+    <div class="message">
+        Installation steps:
+        1. Visit [https://thesigno.com](https://thesigno.com), and accept the certificate (we have self-signed SSL)
+        2. Download the Chrome extension from the link above.
+        3. Go to [chrome://extensions](chrome://extensions), and drag-and-drop the downloaded .crx file
+        4. Visit you Twitter timeline, and click some of those red flags.
+        5. Reload the page, and see how the reports affected the layout.
+    </div>
 </div>
 
 
