--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -23,17 +23,6 @@ title: Home
         </a>
     </div>
 </div>
-<div class="message">
-    Installation steps:
-    1. Visit [https://thesigno.com](https://thesigno.com), and accept the certificate (we have self-signed SSL)
-    2. Download the Chrome extension from the link above.
-    3. Go to [chrome://extensions](chrome://extensions), and drag-and-drop the downloaded .crx file
-    4. Visit you Twitter timeline, and click some of those red flags.
-    5. Reload the page, and see how the reports affected the layout.
-</div>
-
-
-      
       
 <div class="ted-talk">
     <h1>Why is this important?</h1>
@@ -43,4 +32,14 @@ title: Home
     </div>
 
 <iframe src="https://embed-ssl.ted.com/talks/lang/en/monica_lewinsky_the_price_of_shame.html" width="640" height="360" frameborder="0" scrolling="no" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+</div>
+<div class="message" id="instructions">
+    Installation steps:
+    <ol>
+        <li>Visit [https://thesigno.com](https://thesigno.com), and accept the certificate (we have self-signed SSL)</li>
+        <li>Download the Chrome extension from the link above.</li>
+        <li>Go to [chrome://extensions](chrome://extensions), and drag-and-drop the downloaded .crx file</li>
+        <li>Visit you Twitter timeline, and click some of those red flags.</li>
+        <li>Reload the page, and see how the reports affected the layout.</li>
+    </ol>
 </div>
