--- a/_posts/2015-04-18-home.md
+++ b/_posts/2015-04-18-home.md
@@ -36,9 +36,9 @@ title: Home
 <div class="message" id="instructions">
     Installation steps:
     <ol>
-        <li>Visit [https://thesigno.com](https://thesigno.com), and accept the certificate (we have self-signed SSL)</li>
+        <li>Visit <a href="https://thesigno.com">https://thesigno.com</a>, and accept the certificate (we have self-signed SSL)</li>
         <li>Download the Chrome extension from the link above.</li>
-        <li>Go to [chrome://extensions](chrome://extensions), and drag-and-drop the downloaded .crx file</li>
+        <li>Go to <a href="chrome://extensions">chrome://extensions</a>, and drag-and-drop the downloaded .crx file</li>
         <li>Visit you Twitter timeline, and click some of those red flags.</li>
         <li>Reload the page, and see how the reports affected the layout.</li>
     </ol>
